fix center alignement of the screenshot

--- a/washme/src/styles/screen.scss
+++ b/washme/src/styles/screen.scss
@@ -14,7 +14,6 @@
     width: auto;
     animation-duration: 1.5s;
     animation-fill-mode: forwards;
-    margin-left: calc(50% - 208px);
 }
 
 @keyframes fadeIn {
